deploy/service-assurance/grafana/route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: grafana
spec:
  host: grafana.apps.dev7.nfvpe.site
  to:
    kind: Service
    name: grafana
    weight: 100
  wildcardPolicy: None
